--- a/package.json
+++ b/package.json
@@ -31,6 +31,13 @@
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.10.0"
   },
+  "eslintConfig": {
+    "root": true,
+    "extends": [
+      "plugin:vue/essential",
+      "eslint:recommended"
+    ]
+  },
   "babel": {
     "presets": [
       [
